--- a/sul.html
+++ b/sul.html
@@ -16,7 +16,7 @@
             <a href="index.html"><img src="images/logo-senai.png" alt="Logo do SENAI"></a>
         </div>
         <nav>
-            <div class="menu-toggle">=</div>
+            <div class="menu-toggle">☰</div>
             <ul class="menu">
                 <li><a href="index.html">Início</a></li>
                 <li><a href="nordeste.html">Nordeste</a></li>
@@ -25,6 +25,7 @@
                 <li><a href="sudeste.html">Sudeste</a></li>
                 <li><a href="centro-oeste.html">Centro-Oeste</a></li>
             </ul>
+            
         </nav>
     </header>
     <main>
@@ -69,7 +70,7 @@
 
             <div class="sulcards">
                 <div class="cardsul">
-                    <a href="https://www.infoescola.com/parana/historia-do-parana/">
+                    <a href="parana.html">
                         <h3 class="titlecard">Paraná</h3>
                     </a>
 
@@ -84,7 +85,7 @@
                 </div>
 
                 <div class="cardsul">
-                    <a href="https://brasilescola.uol.com.br/brasil/rio-grande-sul.htm">
+                    <a href="rs.html">
                         <h3 class="titlecard">Rio Grande do Sul</h3>
                     </a>
                     <h5>Início no século XVII</h5>
@@ -99,7 +100,7 @@
                 </div>
 
                 <div class="cardsul">
-                    <a href="https://estado.sc.gov.br/conheca-sc/historia/">
+                    <a href="sc.html">
                         <h3 class="titlecard">Santa Catarina</h3>
                     </a>
                     <h5>Início no século XVI / XVIII</h5>
